<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/new_balance"
        android:orderInCategory="0"
        android:showAsAction="never"
        android:title="@string/new_balance"/>
    <item
        android:id="@+id/erase_sheet"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/erase_sheet"/>
    <item
        android:id="@+id/clear_view"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/clear_view"/>
      <item
        android:id="@+id/display_view"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/display_view"/>
    
    <item
        android:id="@+id/help"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/help"/>

</menu>